--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,19 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.app-container {
+  background-color: whitesmoke;
+  max-width: 1200px;
+  box-shadow: 1px 1px 15px 1px grey;
+  width: 100%;
+  height: 800px;
+  align-self: center;
+  margin: 2% 5% 2% 5%;
+  border-radius: 15px;
+  overflow: hidden;
 }
 
 .App-logo {
